--- a/src/02-video.html
+++ b/src/02-video.html
@@ -9,16 +9,17 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-
-    <iframe
-      id="vimeo-player"
-      src="https://player.vimeo.com/video/236203659"
-      width="640"
-      height="360"
-      frameborder="0"
-      allowfullscreen
-      allow="autoplay; encrypted-media"
-    ></iframe>
+    <div class="container">
+      <iframe
+        id="vimeo-player"
+        src="https://player.vimeo.com/video/236203659"
+        width="640"
+        height="360"
+        frameborder="0"
+        allowfullscreen
+        allow="autoplay; encrypted-media"
+      ></iframe>
+    </div>
 
     <script src="js/02-video.js" type="module"></script>
   </body>
