--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -10,19 +10,19 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-
-    <form class="feedback-form" autocomplete="off">
-      <label>
-        Email
-        <input type="email" name="email" autofocus />
-      </label>
-      <label>
-        Message
-        <textarea name="message" rows="8"></textarea>
-      </label>
-      <button type="submit">Submit</button>
-    </form>
-
+    <div class="container">
+      <form class="feedback-form" autocomplete="off">
+        <label>
+          Email
+          <input type="email" name="email" autofocus />
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="8"></textarea>
+        </label>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
     <script src="js/03-feedback.js" type="module"></script>
   </body>
 </html>
