--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,20 @@
       <li><a href="02-video.html">Video playback</a></li>
       <li><a href="03-feedback.html">Feedback form</a></li>
     </ul>
+
+    <div class="area">
+      <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
   </body>
 </html>
